--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/gescott01.png" alt="Greg Picture" width="119" height="136">
+      <td><img src="images/gescott01.jpg" alt="Greg Picture" width="119" height="136">
       <img src="images/spidergreg01.jpg" alt="Spider-Greg Picture" width="119" height="136"></td>
       <td><h1>Gregory Scott</h1>
       <p><em>Computer Science Teacher at <a href="https://fghs.fgsdk12.org/">Forest Grove High School</a> </em></p>
