--- a/contactInfo.html
+++ b/contactInfo.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Contact Info</h1>
-  <p>twitter: @mrscottFGSD</p>
+  <p>twitter: n/a</p>
   <p>email: gscott@fgsd.k12.or.us</p>
 
 <hr>
